--- a/develop/index.html
+++ b/develop/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
     <!-- Bulma -->
     <link href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css" rel="stylesheet">
     <!-- jquery -->
@@ -19,71 +21,74 @@
     <script defer src="./assets/js/javascript.js"></script>
     <script defer src="./assets/env/config.js"></script>
 
-
     <!-- NAV-BAR -->
-    <nav class="navbar" role="navigation" aria-label="main navigation">
-        <div class="navbar-brand">
-            <a class="navbar-item"></a>
-            <img src="./assets/img/site-logo.png" width="150" height="38">
-            </a>
-
-            <div id="navbarBasicExample" class="navbar-menu">
-                <div class="navbar-start">
-                    <a class="navbar-item">
-              Movies
-            </a>
-
-                    <a class="navbar-item">
-              TV Shows
-            </a>
-                </div>
-            </div>
+    <nav class="level">
+        <div class="site-logo">
+            <p class="level-item has-text-centered">
+                <img src="./assets/img/site-logo.png" width="190" height="38">
+            </p>
+        </div>
+        <p class="level-item has-text-centered">
+            <a class="link is-info"></a>
+        </p>
+        <p class="level-item has-text-centered">
+            <a class="link is-info"></a>
+        </p>
+        <p class="level-item has-text-centered nav-movie">
+            <a class="link is-info column is-4 is-size-3">Movies
+                    <span class="material-icons">movie</span>
+                </a>
+            <p class="level-item has-text-centered column is-3 nav-tv">
+                <a class="link is-info column is-3 is-size-3">TV Shows
+                        <span class="material-icons">
+                            smart_display
+                        </span>
+                    </a>
+            </p>
+        </p>
     </nav>
     <!-- END OF NAV-BAR -->
 
-    <section class="hero has-background-white-ter is-medium">
+    <section class="hero has-background-grey-dark is-medium">
 
         <!-- wrapper -->
         <div class="columns is-vcentered">
-            <div class="column is-4">
-                <div class="bd-notification is-one-quarter has-background-warning">SEARCH SECTION
-
+            <div class="column is-3">
+                <div class="bd-notification search-content pt-4 is-one-quarter">
                     <!-- search section wrapper -->
                     <div class="field">
-                        <label class="label">Search by Title:</label>
-                        <div class="control">
-                            <div class="columns">
-                                <div class="column is-half">
-                                    <input class="input is-normal is-rounded" type="text" placeholder="Enter a title">
-                                </div>
-                                <div class="search-button">
-                                    <button class="button is-medium is-rounded">Rounded</button>
+                        <label class="label has-text-white pl-5 is-size-4">Search by Title:</label>
+                        <div class="field">
+                            <div class="control pl-5">
+                                <input class="input is-rounded is-medium" type="text" placeholder="Enter a title">
+
+                                <div class="search-btn">
+                                    <button class="button mt-3 is-success is-medium is-rounded">Search</button>
                                 </div>
                             </div>
+
                         </div>
                     </div>
-                    <!-- end of search section  -->
                 </div>
-
-
+                <!-- end of search section  -->
             </div>
-            <div class="column is-9">
+            <div class="column">
                 <p class="bd-notification has-background-grey-light">DISPLAY LISTINGS SECTION</p>
-                STREAM SECTION Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris. Fusce nec tellus sed augue
-                semper porta. Mauris massa. Vestibulum lacinia arcu eget nulla. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Curabitur sodales ligula in libero. Sed dignissim lacinia nunc. Curabitur tortor.
-                Pellentesque nibh. Aenean quam. In scelerisque sem at dolor. Maecenas mattis. Sed convallis tristique sem. Proin ut ligula vel nunc egestas porttitor. Morbi lectus risus, iaculis vel, suscipit quis, luctus non, massa. Fusce ac turpis quis
-                ligula lacinia aliquet. Mauris ipsum. Nulla metus metus, ullamcorper vel, tincidunt sed, euismod in, nibh. Quisque volutpat condimentum velit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
+
             </div>
+
         </div>
+
+        </div>
+
+
 
 
         <!-- Hero content: Shows where to stram -->
         <div class="hero-body">
             <div class="container has-text-centered">
                 <p class="title">
-                    STREAM SECTION<br> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris.
-                    Fusce nec tellus sed augue semper porta. Mauris massa. Vestibulum lacinia arcu eget nulla. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Curabitur sodales ligula in libero. Sed dignissim
-                    lacinia nunc. Curabitur tortor. Pellentesque nibh. Aenean quam. In scelerisque sem at dolor. Maecenas mattis. Sed convallis tristique sem. Proin ut ligula vel nunc egestas porttitor. Morbi lectus risus, iaculis vel, suscipit quis,
+
                 </p>
             </div>
         </div>
@@ -93,7 +98,7 @@
             <nav class="tabs">
                 <div class="container">
                     <ul>
-                        <li class="is-active"><strong>copyright© 2022: Web Dev Corp.&nbsp</strong></li>
+                        <li class="is-active">copyright© 2022: Web Dev Corp.&nbsp</li>
                         <li>Developers:</li>
                         <li><a>Github profile#1</a></li>
                         <li><a>Github profile#2</a></li>
@@ -103,6 +108,8 @@
             </nav>
         </div>
     </section>
+
+
 </body>
 
 </html>
