--- a/develop/index.html
+++ b/develop/index.html
@@ -74,24 +74,26 @@
             </div>
             <div class="column">
                 <p class="bd-notification has-background-grey-light">DISPLAY LISTINGS SECTION</p>
-
             </div>
-
-        </div>
-
         </div>
 
 
-
-
-        <!-- Hero content: Shows where to stram -->
-        <div class="hero-body">
-            <div class="container has-text-centered">
-                <p class="title">
-
+        <!-- Hero content: stream section-->
+        <div class="columns">
+            <div class="column is-one-third">is-half</div>
+            <div class="column has-background-danger">
+                <p class="title has-text-centered">
+                    Where to Stream Movies/TV Shows
                 </p>
+                <div class="hero-body">
+                    <div class="container has-background-grey-light">
+
+                    </div>
+                </div>
             </div>
         </div>
+        <!--end of stream section -->
+
 
         <!-- Hero footer: will stick at the bottom -->
         <div class="hero-foot">
