finish top10 tv

--- a/develop/index.html
+++ b/develop/index.html
@@ -95,10 +95,12 @@
                 <div class="column is-1">placeholder</div>
 
                 <!-- Show listings -->
-                <div class="column has-background-grey-dark">Show Listings Section
-                    <p class="show-listing-header">
-                        <p class="p-title has-text-centered is-size-3"></p>
-                    </p>
+                <div class="column has-background-grey-dark">
+                    <div class="show-listings-header is-size-3">
+                        <div class="p-title has-text-centered"></div>
+
+
+                    </div>
 
                 </div>
             </div>
