movie categories working

--- a/develop/index.html
+++ b/develop/index.html
@@ -42,7 +42,7 @@
                             <a class="navbar-item is-size-4 movies-btn" data-value="Top250Movies">
                                     Top 10 Movies
                                   </a>
-                            <a class="navbar-item is-size-4 movies-btn" data-value="MostPopularMoviess">
+                            <a class="navbar-item is-size-4 movies-btn" data-value="MostPopularMovies">
                                     Most Popular Movies
                                   </a>
                         </div>
@@ -116,10 +116,8 @@
         </div>
     </section>
 
-<<<<<<< HEAD
     <script defer src="./assets/js/javascript.js"></script>
     <script defer src="./assets/env/config.js"></script>
-=======
     <!-- Hero footer: will stick at the bottom -->
     <div class="hero-foot column is-11 is-offset-1">
         <nav class="tabs ">
@@ -138,7 +136,6 @@
 
     <script defer src="./assets/env/config.js "></script>
     <script defer src="./assets/js/javascript.js "></script>
->>>>>>> 7f6a1dc683642d6f3c71988640041e444f8e688e
 
 </body>
 
