navbar mvp ready

--- a/develop/index.html
+++ b/develop/index.html
@@ -30,8 +30,8 @@
         </div>
 
         <div class="columns">
-            <div class="column is-half block"></div>
-            <div class="column is-half block"></div>
+            <!-- <div class="column is-half block"></div>
+            <div class="column is-half block"></div> -->
 
             <div class="column is-6">
                 <div class="level-item nav-movie">
@@ -68,8 +68,8 @@
             </div>
         </div>
         </a>
-        </p>
-        </p>
+        <!-- </p>
+        </p> -->
     </nav>
     <!-- END OF NAV-BAR -->
 
