--- a/develop/index.html
+++ b/develop/index.html
@@ -134,6 +134,15 @@
     </div>
     </section>
 
+    <div class="modal" id="modal">
+        <div class="modal-background"></div>
+        <div class="modal-content">
+          <!-- Any other Bulma elements you want -->
+          <p>Unable to connect to Movies API :P</p>
+        </div>
+        <button class="modal-close is-large" aria-label="close"></button>
+      </div>
+
     <script defer src="./assets/env/config.js "></script>
     <script defer src="./assets/js/javascript.js "></script>
 
