--- a/develop/index.html
+++ b/develop/index.html
@@ -11,7 +11,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css" rel="stylesheet">
     <!-- jquery -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-
     <!-- stylesheet -->
     <link href="./assets/css/style.css" rel="stylesheet">
 
@@ -69,8 +68,7 @@
             </div>
         </div>
         </a>
-        <!-- </p>
-        </p> -->
+
     </nav>
     <!-- END OF NAV-BAR -->
 
@@ -97,9 +95,9 @@
                 </div>
                 <div class="column is-1"></div>
 
-                <!-- Show listings -->
+                <!-- Show list -->
                 <div class="column">
-                    <div class="show-listings-header is-size-2">
+                    <div class="show-list-header is-size-2">
                         <div class="p-title has-text-centered"></div>
                     </div>
                 </div>
@@ -111,8 +109,6 @@
                 <div class="column is-1 "></div>
                 <div class="column has-background-danger">Stream Section</div>
 
-
-
                 <button class="modal-close is-large" aria-label="close"></button>
             </div>
 
@@ -121,8 +117,6 @@
         </div>
     </section>
 
-    <script defer src="./assets/js/javascript.js"></script>
-    <script defer src="./assets/env/config.js"></script>
     <!-- Hero footer: will stick at the bottom -->
     <div class="hero-foot column is-11 is-offset-1">
         <nav class="tabs ">
@@ -139,27 +133,23 @@
     </div>
     </section>
 
-
     <div id="modal-js" class="modal">
         <div class="modal-background"></div>
 
         <div class="modal-content">
             <div class="box-info">
-
-                <!-- Your content -->
+                <!-- content -->
             </div>
         </div>
     </div>
 
-
-    <div class="modal" id="modal">
+    <!-- <div class="modal unable-to-connect" id="modal">
         <div class="modal-background"></div>
         <div class="modal-content">
-            <!-- Any other Bulma elements you want -->
             <p>Unable to connect to Movies API :P</p>
         </div>
         <button class="modal-close is-large" aria-label="close"></button>
-    </div>
+    </div> -->
 
     <script defer src="./assets/env/config.js "></script>
     <script defer src="./assets/js/javascript.js "></script>
