--- a/develop/index.html
+++ b/develop/index.html
@@ -29,44 +29,47 @@
             </p>
         </div>
 
-        <div class="columns">
-            <!-- <div class="column is-half block"></div>
-            <div class="column is-half block"></div> -->
+        <!-- <div class="column is-half block"></div> -->
+        <!-- <div class="column is-half block"></div> -->
+        <div class="column is-3"></div>
+        <div class="column">
 
-            <div class="column is-6">
-                <div class="level-item nav-movie">
-                    <div class="navbar-item level-item has-dropdown is-hoverable ">
-                        <a class="link is-info is-size-3">Movies
+            <div class="level-item nav-movie">
+                <div class="column is-half"></div>
+                <div class="navbar-item level-item has-dropdown is-hoverable ">
+                    <a class="link is-info is-size-3">Movies
                                 <span class="material-icons">movie</span></a>
-                        <div class="navbar-dropdown ">
-                            <a class="navbar-item is-size-4 movies-btn" data-value="Top250Movies">
+                    <div class="navbar-dropdown ">
+                        <a class="navbar-item is-size-4 movies-btn" id="1" data-movie="Top250Movies">
                                     Top 10 Movies
                                   </a>
-                            <a class="navbar-item is-size-4 movies-btn" data-value="MostPopularMovies">
+                        <a class="navbar-item is-size-4 movies-btn" id="2" data-movie="MostPopularMovies">
                                     Most Popular Movies
                                   </a>
-                        </div>
                     </div>
                 </div>
-
             </div>
-            <div class="column is-6">
-                <div class="level-item nav-tv">
-                    <div class="navbar-item level-item has-dropdown is-hoverable ">
-                        <a class="link is-info is-size-3">TV Shows
+
+        </div>
+        <div class="column is-4">
+            <div class="level-item nav-tv">
+                <div class="navbar-item level-item has-dropdown is-hoverable ">
+                    <a class="link is-info is-size-3">TV Shows
                     <span class="material-icons">smart_display</span></a>
-                        <div class="navbar-dropdown">
-                            <a class="navbar-item is-size-4 tv-show-btn" id="1" data-value="Top250TVs">
+                    <div class="navbar-dropdown">
+                        <a class="navbar-item is-size-4 tv-show-btn" id="1" data-tv="Top250TVs">
                         Top 10 TVs
                       </a>
-                            <a class="navbar-item is-size-4 tv-show-btn" id="2" data-value="MostPopularTVs">
+                        <a class="navbar-item is-size-4 tv-show-btn" id="2" data-tv="MostPopularTVs">
                         Most Popular TVs
                       </a>
-                        </div>
                     </div>
                 </div>
+                <div class="column is-three-fifths"></div>
             </div>
+
         </div>
+
         </a>
 
     </nav>
@@ -76,7 +79,7 @@
         <div class="hero-body">
             <div class="columns is-rest is-desktop">
                 <!-- search section -->
-                <div class="column is-rest search-wrapper is-one-quarter has-background-grey-dark is-medium">
+                <div class="column is-rest search-wrapper is-one-quarter is-medium">
                     <div class="bd-notification search-content pt-4">
 
                         <div class="field">
@@ -102,16 +105,6 @@
                     </div>
                 </div>
             </div>
-
-            <!-- stream content -->
-            <div class="columns is-desktop">
-                <div class="column is-one-quarter has-background-warning"></div>
-                <div class="column is-1 "></div>
-                <div class="column has-background-danger">Stream Section</div>
-
-                <button class="modal-close is-large" aria-label="close"></button>
-            </div>
-
         </div>
         </div>
         </div>
@@ -133,7 +126,7 @@
     </div>
     </section>
 
-    <div id="modal-js" class="modal">
+    <div class="modal" id="modal-js">
         <div class="modal-background"></div>
 
         <div class="modal-content">
@@ -142,14 +135,6 @@
             </div>
         </div>
     </div>
-
-    <!-- <div class="modal unable-to-connect" id="modal">
-        <div class="modal-background"></div>
-        <div class="modal-content">
-            <p>Unable to connect to Movies API :P</p>
-        </div>
-        <button class="modal-close is-large" aria-label="close"></button>
-    </div> -->
 
     <script defer src="./assets/env/config.js "></script>
     <script defer src="./assets/js/javascript.js "></script>
