--- a/develop/index.html
+++ b/develop/index.html
@@ -91,7 +91,14 @@
                                         <button class="button mt-3 is-success is-medium is-rounded" id="search-btn">Search</button>
                                     </div>
                                 </div>
-
+                                <!-- search Movie or TV -->
+                                <div class="select">
+                                    <select id="search-type">
+              <option class="is-focused">Search by Type:</option>
+              <option value="SearchMovie">Movies</option>
+              <option value="SearchSeries">TV Series</option>
+            </select>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -111,11 +118,11 @@
     </section>
 
     <!-- Hero footer: will stick at the bottom -->
-    <div class="hero-foot column is-11 is-offset-1">
+    <div class="hero-foot column ">
         <nav class="tabs ">
-            <div class="container has-background-grey-dark">
+            <div class="container ">
                 <ul>
-                    <li class="is-active ">copyright© 2022: Web Dev Corp.&nbsp</li>
+                    <li>copyright© 2022: Abc Web Corp.&nbsp</li>
                     <li>Developers:</li>
                     <li><a>Github profile#1</a></li>
                     <li><a>Github profile#2</a></li>
@@ -124,7 +131,6 @@
             </div>
         </nav>
     </div>
-    </section>
 
     <div class="modal" id="modal-js">
         <div class="modal-background"></div>
@@ -135,6 +141,7 @@
             </div>
         </div>
     </div>
+
 
     <script defer src="./assets/env/config.js "></script>
     <script defer src="./assets/js/javascript.js "></script>
