navbar minor fixies

--- a/develop/index.html
+++ b/develop/index.html
@@ -31,7 +31,7 @@
 
         <!-- <div class="column is-half block"></div> -->
         <!-- <div class="column is-half block"></div> -->
-        <div class="column is-3"></div>
+        <!-- <div class="column is-3"></div> -->
         <div class="column">
 
             <div class="level-item nav-movie">
@@ -65,7 +65,7 @@
                       </a>
                     </div>
                 </div>
-                <div class="column is-three-fifths"></div>
+                <!-- <div class="column is-three-fifths"></div> -->
             </div>
 
         </div>
@@ -94,10 +94,11 @@
                                 <!-- search Movie or TV -->
                                 <div class="select">
                                     <select id="search-type">
-              <option class="is-focused">Search by Type:</option>
-              <option value="SearchMovie">Movies</option>
-              <option value="SearchSeries">TV Series</option>
-            </select>
+                                        <option class="is-focused">Please select a Type:</option>
+                                        <option value="SearchMovie">Movies</option>
+                                        <option value="SearchSeries">TV Series</option>
+                                    </select>
+            
                                 </div>
                             </div>
                         </div>
@@ -124,9 +125,10 @@
                 <ul>
                     <li>copyright© 2022: Abc Web Corp.&nbsp</li>
                     <li>Developers:</li>
-                    <li><a>Github profile#1</a></li>
-                    <li><a>Github profile#2</a></li>
-                    <li><a>Github profile#3</a></li>
+                    <li><a href="https://github.com/SophoanMeas">Sophoan Meas</a></li>
+                    <li><a href="https://github.com/SierraDavis2000">Sierra Davis</a></li>
+                    <li><a href="https://github.com/elsartz">Vardis Sartzetakis</a></li>
+                    <li><a href="https://github.com/mwihakig">Mwihaki Githii</a></li>
                 </ul>
             </div>
         </nav>
