--- a/develop/index.html
+++ b/develop/index.html
@@ -20,7 +20,6 @@
 
 <body>
 
-
     <!-- NAV-BAR -->
     <nav class="level">
         <div class="site-logo">
@@ -57,10 +56,10 @@
                     <a class="link is-info is-size-3">TV Shows
                     <span class="material-icons">smart_display</span></a>
                     <div class="navbar-dropdown">
-                        <a class="navbar-item is-size-4 tv-show-btn" id="1" data-tv="Top250TVs">
+                        <a class="navbar-item is-size-4 tv-show-btn" id="3" data-tv="Top250TVs">
                         Top 10 TVs
                       </a>
-                        <a class="navbar-item is-size-4 tv-show-btn" id="2" data-tv="MostPopularTVs">
+                        <a class="navbar-item is-size-4 tv-show-btn" id="4" data-tv="MostPopularTVs">
                         Most Popular TVs
                       </a>
                     </div>
@@ -74,7 +73,6 @@
 
     </nav>
     <!-- END OF NAV-BAR -->
-
     <section class="hero is-link">
         <div class="hero-body">
             <div class="columns is-rest is-desktop">
@@ -90,18 +88,36 @@
                                     <div class="search-btn">
                                         <button class="button mt-3 is-success is-medium is-rounded" id="search-btn">Search</button>
                                     </div>
+
                                 </div>
+
                                 <!-- search Movie or TV -->
-                                <div class="select">
+
+                                <div class="select ">
                                     <select id="search-type">
-              <option class="is-focused">Search by Type:</option>
-              <option value="SearchMovie">Movies</option>
-              <option value="SearchSeries">TV Series</option>
-            </select>
+                      <option class="is-focused">Search by Type:</option>
+                      <option value="SearchMovie">Movies</option>
+                      <option value="SearchSeries">TV Series</option>
                                 </div>
+
+
+                    
+                                </div>
+
+                       
+                                </div>
+
+                                </select>
+
+                                </div>
+
                             </div>
                         </div>
                     </div>
+
+
+
+
                 </div>
                 <div class="column is-1"></div>
 
@@ -115,6 +131,7 @@
         </div>
         </div>
         </div>
+
     </section>
 
     <!-- Hero footer: will stick at the bottom -->
@@ -124,9 +141,10 @@
                 <ul>
                     <li>copyright© 2022: Abc Web Corp.&nbsp</li>
                     <li>Developers:</li>
-                    <li><a>Github profile#1</a></li>
-                    <li><a>Github profile#2</a></li>
-                    <li><a>Github profile#3</a></li>
+                    <li><a href="https://github.com/SophoanMeas" target="_blank">Sophoan Meas</a></li>
+                    <li><a href="https://github.com/elsartz" target="_blank">Vardis Sartzetakis </a></li>
+                    <li><a href="https://github.com/mwihakig" target="_blank">Mwihaki Githii </a></li>
+                    <li><a href="https://github.com/SierraDavis2000" target="_blank">Sierra Davis</a></li>
                 </ul>
             </div>
         </nav>
@@ -141,7 +159,6 @@
             </div>
         </div>
     </div>
-
 
     <script defer src="./assets/env/config.js "></script>
     <script defer src="./assets/js/javascript.js "></script>
